# robosub_software_2026

./: .gitignore  README.md  button_interface.py  coinflip_fsm.py  forward_spin_fsm.py  fsm.py  gate_fsm.py  hard_kill.sh  imu_fsm.py  jesus.txt  launch.py  log.yaml  missionctrl.py  missionctrl_old.py  objects.yaml  octagon_fsm.py  pyproject.toml  rawr_xd.txt  read_can.py  return_fsm.py  save_process_info.py  services.csv  shared_memory.py  slalom_fsm.py  socket_send.py  soft_kill.py  spin_fsm.py  start.py  start_button.py  test_fsm.py  test_msn_ctrl.py  tricks_fsm.py  xd.txt  z_finder.py
display_manager/: config.yaml  services.csv  socket_manager.py  start_services.py  stop_services.py
display_manager/services/: internal_screen_reciever.py
fsm/: coinflip_fsm.py  fsm.py  gate_fsm.py  octagon_fsm.py  return_fsm.py  slalom_fsm.py  test_fsm.py
modules/gps/: gps_interface.py
modules/gui/: .gitignore  README.md  testVals.json
modules/logger/: better_logger.py  logger.py  logs.yaml
modules/motors/: MotorInterface.py  MotorWrapper.py  Motor_Test_CLI_2.py  ObjectTracking_old.py  ScionMotorWrapper.py  USB_Transmit.py  hierarchical_state_machine  hierarchical_state_machine.py  kill_motors.py  motor-settings.json  motor_simulation.py  new_motor_format.txt  states.yaml
motors/: Central MCU motor test x 8.py  MotorWrapper.py  USB_Transmit.py  motor-settings.json
sensors/: depth_sensor_interface.py
utils/: check_sensors.py  initialize_internal_display.sh  kill_button_interface.py  read_can.py  socket_send.py
vision/: Zed_Wrapper.py  take_imgs.py  vision_main.py
(+58 files in other folders)
